notary_deployment_automated/deployments/dev/back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary-deployment
  labels:
    app: notary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notary-deployment
  template:
    metadata:
      labels:
        app: notary-deployment
    spec:
      containers:
      - name: back-container
        image: registry.do.bluemint.ai/notaryback:4f07126a
        # volumeMounts:
        #   - name: shared-volume
        #     mountPath: /app/backend/notary/contracts/docs/
        resources:
          requests:
            memory: "700Mi"
            cpu: "300m"
          limits:
            memory: "2Gi"
            cpu: "800m"
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "/etc/init.d/migrate.sh"]  
        ports:
        - containerPort: 8081
        securityContext:
          privileged: true
      imagePullSecrets:
        - name: regcrednotary
      # volumes:
      #   - name: shared-volume
      #     persistentVolumeClaim:
      #       claimName: shared-volume-claim
