notary_deployment_automated/deployments/dev/back/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: notary-service
  labels:
    app: notary-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: notary-deployment
  sessionAffinity: None
