notary_deployment_automated/deployments/dev/back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-notary-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: back-dev-notary.gcp.bluemint.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notary-service
            port:
              number: 80
  tls:
  - hosts:
    - back-dev-notary.gcp.bluemint.ai
    secretName: dev-backend
